Fix the issue with layout shift on status display

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -45,15 +45,22 @@
 body,
 fieldset,
 .inputs,
+.status-wrapper,
 .content {
   display: flex;
 }
 
 body,
 .inputs,
+.status-wrapper,
 .content {
   flex-direction: column;
   gap: var(--gap-mid);
+}
+
+body,
+.status-wrapper {
+  align-items: center;
 }
 
 body {
@@ -62,7 +69,6 @@ body {
   height: 100vh;
   padding-top: 1.5rem;
   justify-content: center;
-  align-items: center;
 }
 
 body > * {
@@ -70,7 +76,7 @@ body > * {
 }
 
 .inputs,
-.status,
+.status-wrapper,
 .content {
   width: 20%;
 }
@@ -112,32 +118,47 @@ button {
   min-width: 30%;
 }
 
-.status {
-  color: var(--status-color);
-  height: 0;
-}
-
 .content {
   flex: 1;
   justify-content: space-around;
 }
 
-.input-wrapper {
+.input-wrapper,
+.status-wrapper {
   position: relative;
+}
+
+.input-wrapper {
   z-index: 1;
+}
+
+.prompt,
+.status {
+  position: absolute;
+}
+
+.prompt,
+.status-wrapper {
+  z-index: -1;
 }
 
 .prompt {
   display: none;
-  position: absolute;
   top: 1.25rem;
-  z-index: -1;
   background-color: var(--prompt-color);
   padding: 1.75rem 1rem 0.5rem;
 }
 
 .prompt:hover {
   background-color: var(--alt-color);
+}
+
+.status {
+  color: var(--status-color);
+  height: 0;
+  width: 100%;
+  top: 0;
+  left: 0;
 }
 
 /* ===== END OF MAIN LAYOUT ===== */
@@ -286,13 +307,14 @@ a:visited {
 .loader {
   min-width: var(--icon-small-width); /* control the size */
   aspect-ratio: 1;
-  display: none;
+  display: grid;
+  visibility: hidden;
   mask: conic-gradient(from 22deg, #0003, #000);
   animation: load 1s steps(8) infinite;
 }
 .loader,
 .loader:before {
-  --_g: linear-gradient(#17177c 0 0) 50%; /* update the color here */
+  --_g: linear-gradient(var(--card-color) 0 0) 50%; /* update the color here */
   background:
     var(--_g) / 34% 8% space no-repeat,
     var(--_g) / 8% 34% no-repeat space;
